@@ -461,7 +461,7 @@
       <string>Show circles with fixed angular size around the telescope reticle</string>
      </property>
      <property name="text">
-      <string>Show FOV circles</string>
+      <string>Use field of view indicators</string>
      </property>
     </widget>
    </widget>
